--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>88 추천 업체</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title> 88 </title>
 
 <style>
-/* ✅ 폭 계산 통일 (팝업/버튼 쏠림/잘림 방지) */
+/* ✅ 폭 계산 통일 (팝업 쏠림/버튼 잘림 방지) */
 *,
 *::before,
-*::after{ box-sizing:border-box; }
+*::after { box-sizing: border-box; }
 
 body{
   margin:0;
   background:#0b0b0b;
-  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   color:#fff;
 }
 
 /* ===== 상단 헤더 ===== */
-.header{ text-align:center; padding:18px 0 10px; }
-.header .logo{
-  font-size:36px; font-weight:800; letter-spacing:2px; color:#d4af37;
+.header{
+  text-align:center;
+  padding:18px 0 10px;
 }
-.header .sub{ font-size:12px; color:#888; margin-top:4px; }
+.header .logo{
+  font-size:36px;
+  font-weight:800;
+  letter-spacing:2px;
+  color:#d4af37;
+}
+.header .sub{
+  font-size:12px;
+  color:#888;
+  margin-top:4px;
+}
 
-/* ===== 전체 래퍼 ===== */
+/* ===== 리스트 래퍼 ===== */
 .wrapper{
-  max-width:420px;
+  max-width:520px;          /* 모바일/태블릿: 1열 */
   margin:0 auto;
-  padding:10px 14px 40px;
+  padding:10px 14px 44px;
+}
+
+/* ✅ PC 2열 레이아웃 */
+@media (min-width: 900px){
+  .wrapper{
+    max-width:1100px;
+    display:grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap:22px;
+    align-items:start;
+  }
+  /* grid에서는 margin-bottom 대신 gap 쓰는 게 깔끔 */
+  .card{ margin-bottom:0; }
 }
 
 /* ===== 카드 ===== */
@@ -42,13 +65,14 @@ body{
   cursor:pointer;
 }
 
-/* ✅ 이미지 영역 (전시형 + 블러/그라데이션) */
+/* ===== 이미지 영역 (전시형 + 고급 배경) ===== */
+/* 모바일에서 16:9가 “항상” 안정적으로 나오게: height를 vw로 강제 */
 .img-box{
   position:relative;
   width:100%;
-  /* 모바일에서도 안정적으로 보이게: aspect-ratio + 최소높이 */
-  aspect-ratio:16 / 9;
-  min-height:190px;
+  height:56.25vw;           /* 16:9 = 9/16 = 0.5625 */
+  max-height:300px;         /* 너무 커지지 않게 */
+  min-height:190px;         /* 너무 작아지지 않게 */
   background:#000;
   display:flex;
   align-items:center;
@@ -56,12 +80,20 @@ body{
   overflow:hidden;
 }
 
+/* PC에서는 전시 느낌(프레임) 살짝 */
+@media (min-width: 768px){
+  .img-box{
+    height:260px;
+    padding:12px;
+  }
+}
+
 /* 🔥 이미지 기반 블러 배경 */
 .img-box::before{
   content:"";
   position:absolute;
   inset:-20px;
-  background-image:var(--bg, none);
+  background-image: var(--bg, none);
   background-size:cover;
   background-position:center;
   filter:blur(22px);
@@ -69,7 +101,7 @@ body{
   opacity:.45;
 }
 
-/* ✨ 고급 그라데이션 오버레이 */
+/* ✨ 골드 포인트 그라데이션 */
 .img-box::after{
   content:"";
   position:absolute;
@@ -80,28 +112,15 @@ body{
   pointer-events:none;
 }
 
-/* ✅ “모바일에서 짤린 듯” 현상 방지 핵심
-   - width/height 100% 금지
-   - auto + max로만 제어
-*/
+/* ✅ 모바일에서도 “전체 이미지가 항상 보이게” 강제 */
 .img-box img{
   position:relative;
   z-index:1;
-  width:auto !important;
-  height:auto !important;
-  max-width:92%;
-  max-height:88%;
-  object-fit:contain;
+  width:100% !important;
+  height:100% !important;
+  object-fit:contain !important; /* 절대 안 잘림 */
   display:block;
   filter: drop-shadow(0 10px 24px rgba(0,0,0,.55));
-}
-
-/* aspect-ratio 미지원 대비(아주 구형 브라우저) */
-@supports not (aspect-ratio: 16 / 9){
-  .img-box{
-    height:56vw;           /* 16:9 비슷 */
-    max-height:260px;
-  }
 }
 
 /* ===== 카드 내용 ===== */
@@ -110,7 +129,7 @@ body{
 .desc{ font-size:14px; color:#bbb; margin-top:6px; }
 .code{ margin-top:10px; color:#d4af37; font-weight:600; }
 
-/* ===== 팝업 공통 ===== */
+/* ===== 팝업 ===== */
 .popup{
   position:fixed;
   top:0; right:0; bottom:0; left:0;
@@ -142,24 +161,12 @@ body{
   text-decoration:none;
   cursor:pointer;
 }
+
 .copy{ background:#1f1f1f; color:#fff; }
 .go{ background:linear-gradient(135deg,#d4af37,#f5e27a); color:#000; }
 
 .telegram{ margin-top:10px; }
 .telegram a{ color:#1da1f2; font-weight:bold; text-decoration:none; }
-
-/* ===== PC 보정 ===== */
-@media(min-width:768px){
-  .wrapper{ max-width:520px; }
-  .img-box{
-    min-height:260px;
-    padding:12px; /* 전시 느낌(프레임) */
-  }
-  .img-box img{
-    max-width:94%;
-    max-height:90%;
-  }
-}
 </style>
 </head>
 
@@ -180,6 +187,20 @@ body{
       <b>검증된 4곳</b>만 보세요
     </p>
     <div class="btn go" onclick="closeIntro()">확인</div>
+  </div>
+</div>
+
+<!-- 카드 클릭 팝업 -->
+<div class="popup" id="cardPopup">
+  <div class="popup-box">
+    <h2 id="pTitle"></h2>
+    <p>추천코드 : <b id="pCode"></b></p>
+    <div class="btn copy" onclick="copyCode()">추천코드 복사</div>
+    <a class="btn go" id="pLink" target="_blank" rel="noopener">사이트 이동</a>
+    <div class="telegram">
+      <a href="https://t.me/UZU59" target="_blank" rel="noopener">텔레그램 문의 @UZU59</a>
+    </div>
+    <div class="btn copy" onclick="closeCard()">닫기</div>
   </div>
 </div>
 
@@ -233,34 +254,34 @@ body{
 </div>
 
 <script>
-/* ✅ 각 카드 이미지로 블러 배경 자동 설정 (HTML 수정 최소화) */
-document.querySelectorAll(".img-box").forEach(box=>{
+/* ✅ 각 카드 이미지로 블러 배경 자동 설정 */
+document.querySelectorAll(".img-box").forEach(box => {
   const img = box.querySelector("img");
-  if(img && img.getAttribute("src")){
+  if (img && img.getAttribute("src")) {
     box.style.setProperty("--bg", `url('${img.getAttribute("src")}')`);
   }
 });
 
 /* 첫 접속 팝업 */
-if(localStorage.getItem("visit")){
-  document.getElementById("intro").style.display="none";
+if (localStorage.getItem("visit")) {
+  document.getElementById("intro").style.display = "none";
 }
 function closeIntro(){
   localStorage.setItem("visit","1");
-  document.getElementById("intro").style.display="none";
+  document.getElementById("intro").style.display = "none";
 }
 
 /* 카드 팝업 */
-let currentCode="";
-function openCard(title,code,link){
-  currentCode=code;
-  document.getElementById("pTitle").innerText=title;
-  document.getElementById("pCode").innerText=code;
-  document.getElementById("pLink").href=link;
-  document.getElementById("cardPopup").style.display="flex";
+let currentCode = "";
+function openCard(title, code, link){
+  currentCode = code;
+  document.getElementById("pTitle").innerText = title;
+  document.getElementById("pCode").innerText = code;
+  document.getElementById("pLink").href = link;
+  document.getElementById("cardPopup").style.display = "flex";
 }
 function closeCard(){
-  document.getElementById("cardPopup").style.display="none";
+  document.getElementById("cardPopup").style.display = "none";
 }
 function copyCode(){
   navigator.clipboard.writeText(currentCode);
