--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>88 추천 업체</title>
+<title> 88 </title>
 
 <style>
 *,
@@ -167,7 +167,7 @@ body{
 
 <div class="header">
   <div class="logo">88</div>
-  <div class="sub">추천 · 보증 업체 안내</div>
+  <div class="sub"> 88 보증 업체 안내</div>
 </div>
 
 <!-- 첫 방문 팝업 -->
@@ -202,55 +202,55 @@ body{
   <div class="card" data-priority="high" onclick="openCard('B WIN','as88','https://bwk999.com')">
     <div class="img-box"><img src="img/img1.jpg"></div>
     <div class="content">
-      <div class="site">B WIN</div>
-      <div class="desc">업계 자본력 · 만족도 1위</div>
-      <div class="code">추천코드 : as88</div>
+      <div class="site"> B WIN </div>
+      <div class="desc">*고액전용* USDT 무기명가입&수수료지원 / 모든게임 입금플러스</div>
+      <div class="code">가입코드 : as88</div>
     </div>
   </div>
 
-  <div class="card" data-priority="high" onclick="openCard('업체명2','as88','#')">
+  <div class="card" data-priority="high" onclick="openCard('CAPS','RUST','https://caps-22.com')">
     <div class="img-box"><img src="img/img2.jpg"></div>
     <div class="content">
-      <div class="site">업체명2</div>
-      <div class="desc">안정 운영 · 빠른 정산</div>
-      <div class="code">추천코드 : as88</div>
+      <div class="site"> CAPS </div>
+      <div class="desc">*고액전용*미겜 첫충: 5%, 페이백 5%, 출석 30만원</div>
+      <div class="code">가입코드 : RUST </div>
     </div>
   </div>
 
-  <div class="card" data-priority="high" onclick="openCard('업체명3','as88','#')">
+  <div class="card" data-priority="high" onclick="openCard('BETZY','BANGU','https://b88-et.com')">
     <div class="img-box"><img src="img/img3.jpg"></div>
     <div class="content">
-      <div class="site">업체명3</div>
-      <div class="desc">VIP 고액 유저 추천</div>
-      <div class="code">추천코드 : as88</div>
+      <div class="site"> BETZY </div>
+      <div class="desc">*고액전용*스포츠 첫:10% 미겜 첫:5%, 페이백 5%, 출석 30만원</div>
+      <div class="code">가입코드 : BANGU </div>
     </div>
   </div>
 
   <!-- 4~6 -->
-  <div class="card" data-priority="normal" onclick="openCard('업체명4','as88','#')">
+  <div class="card" data-priority="normal" onclick="openCard('VEGAS','6789','https://las403.com/')">
     <div class="img-box"><img src="img/img4.jpg"></div>
     <div class="content">
-      <div class="site">업체명4</div>
-      <div class="desc">신규 · 복귀 혜택</div>
-      <div class="code">추천코드 : as88</div>
+      <div class="site"> VEGAS </div>
+      <div class="desc">스포츠,미겜 입플 3+3, 10+5, 30+10, 50+15 100+30, 30% / 카지노 입플:3+2, 5+3 or 10%</div>
+      <div class="code">가입코드 : 6789 </div>
     </div>
   </div>
 
-  <div class="card" data-priority="normal" onclick="openCard('업체명5','as88','#')">
+  <div class="card" data-priority="normal" onclick="openCard('LULA BET','ZZ99','https://lula.ws')">
     <div class="img-box"><img src="img/img5.jpg"></div>
     <div class="content">
-      <div class="site">업체명5</div>
-      <div class="desc">라이브 특화</div>
-      <div class="code">추천코드 : as88</div>
+      <div class="site">LULA BET </div>
+      <div class="desc"> 원화 USDT 무기명가입 페이백10% </div>
+      <div class="code">가입코드 : ZZ99</div>
     </div>
   </div>
 
-  <div class="card" data-priority="normal" onclick="openCard('업체명6','as88','#')">
+  <div class="card" data-priority="normal" onclick="openCard('CHOY BET','TAN','http://cy-40.com/')">
     <div class="img-box"><img src="img/img6.jpg"></div>
     <div class="content">
-      <div class="site">업체명6</div>
+      <div class="site">CHOY BET</div>
       <div class="desc">이벤트 강화</div>
-      <div class="code">추천코드 : as88</div>
+      <div class="code">가입코드 : TAN </div>
     </div>
   </div>
 
@@ -315,3 +315,4 @@ function copyCode(){
 
 </body>
 </html>
+
