--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> 88 </title>
+<title>88 추천 업체</title>
 
 <style>
 *,
@@ -39,8 +39,6 @@ body{
   margin:0 auto;
   padding:10px 14px 30px;
 }
-
-/* PC 2열 */
 @media(min-width:900px){
   .wrapper{
     max-width:1100px;
@@ -72,12 +70,8 @@ body{
   justify-content:center;
   overflow:hidden;
 }
-
 @media(min-width:768px){
-  .img-box{
-    height:260px;
-    padding:12px;
-  }
+  .img-box{ height:260px; padding:12px; }
 }
 
 .img-box::before{
@@ -90,7 +84,6 @@ body{
   filter:blur(22px);
   opacity:.45;
 }
-
 .img-box::after{
   content:"";
   position:absolute;
@@ -121,7 +114,6 @@ body{
   justify-content:center;
   z-index:999;
 }
-
 .popup-box{
   background:#111;
   border-radius:20px;
@@ -140,8 +132,9 @@ body{
   border-radius:12px;
   font-weight:600;
   cursor:pointer;
+  text-decoration:none;
+  display:block;
 }
-
 .copy{ background:#1f1f1f;color:#fff; }
 .go{ background:linear-gradient(135deg,#d4af37,#f5e27a);color:#000; }
 
@@ -167,7 +160,7 @@ body{
 
 <div class="header">
   <div class="logo">88</div>
-  <div class="sub"> 88 보증 업체 안내</div>
+  <div class="sub">추천 · 보증 업체 안내</div>
 </div>
 
 <!-- 첫 방문 팝업 -->
@@ -187,70 +180,92 @@ body{
   <div class="popup-box">
     <h2 id="pTitle"></h2>
     <p>추천코드 : <b id="pCode"></b></p>
+    <p id="pBenefit" style="color:#f5e27a;font-size:14px;"></p>
+    <p id="pNotice" style="color:#ff6b6b;font-size:13px;"></p>
+
     <div class="btn copy" onclick="copyCode()">추천코드 복사</div>
     <a class="btn go" id="pLink" target="_blank">사이트 이동</a>
+
     <div class="telegram">
-      <a href="https://t.me/UZU59" target="_blank">텔레그램 문의 @UZU59</a>
+      <a id="pTelegram" target="_blank">텔레그램 </a>
     </div>
+
     <div class="btn copy" onclick="closeCard()">닫기</div>
   </div>
 </div>
 
 <div class="wrapper">
 
-  <!-- 1~3 우선 -->
-  <div class="card" data-priority="high" onclick="openCard('B WIN','as88','https://bwk999.com')">
+  <!-- 카드 1 -->
+  <div class="card" data-priority="high"
+   onclick="openCard('B WIN','AS88','https://bwk999.com','UZU59',
+   '*고액전용* USDT 무기명가입&수수료지원 / 모든게임 입금플러스',
     <div class="img-box"><img src="img/img1.jpg"></div>
     <div class="content">
-      <div class="site"> B WIN </div>
+      <div class="site">B WIN</div>
       <div class="desc">*고액전용* USDT 무기명가입&수수료지원 / 모든게임 입금플러스</div>
-      <div class="code">가입코드 : as88</div>
+      <div class="code">가입코드 : AS88</div>
     </div>
   </div>
 
-  <div class="card" data-priority="high" onclick="openCard('CAPS','RUST','https://caps-22.com')">
+  <!-- 카드 2 -->
+  <div class="card" data-priority="high"
+   onclick="openCard('CAPS','RUST','https://caps-22.com','UZU59',
+   '*고액전용*미겜 첫충: 5%, 페이백 5%, 출석 30만원',
     <div class="img-box"><img src="img/img2.jpg"></div>
     <div class="content">
-      <div class="site"> CAPS </div>
+      <div class="site">CAPS </div>
       <div class="desc">*고액전용*미겜 첫충: 5%, 페이백 5%, 출석 30만원</div>
-      <div class="code">가입코드 : RUST </div>
+      <div class="code">가입코드 : RUST</div>
     </div>
   </div>
 
-  <div class="card" data-priority="high" onclick="openCard('BETZY','BANGU','https://b88-et.com')">
+  <!-- 카드 3 -->
+  <div class="card" data-priority="high"
+   onclick="openCard('BETZY','BANGU','https://b88-et.com','UZU59',
+   '*고액전용*스포츠 첫:10% 미겜 첫:5%, 페이백 5%, 출석 30만원',
     <div class="img-box"><img src="img/img3.jpg"></div>
     <div class="content">
-      <div class="site"> BETZY </div>
+      <div class="site">BETZY</div>
       <div class="desc">*고액전용*스포츠 첫:10% 미겜 첫:5%, 페이백 5%, 출석 30만원</div>
-      <div class="code">가입코드 : BANGU </div>
+      <div class="code">가입코드 : BANGU</div>
     </div>
   </div>
 
-  <!-- 4~6 -->
-  <div class="card" data-priority="normal" onclick="openCard('VEGAS','6789','https://las403.com/')">
+  <!-- 카드 4 -->
+  <div class="card" data-priority="normal"
+   onclick="openCard('VEGAS','6789','https://las403.com','UZU59',
+   '스포츠,미겜 입플 3+3, 10+5, 30+10, 50+15 100+30, 30% / 카지노 입플:3+2, 5+3 or 10%',
     <div class="img-box"><img src="img/img4.jpg"></div>
     <div class="content">
-      <div class="site"> VEGAS </div>
+      <div class="site">VEGAS</div>
       <div class="desc">스포츠,미겜 입플 3+3, 10+5, 30+10, 50+15 100+30, 30% / 카지노 입플:3+2, 5+3 or 10%</div>
-      <div class="code">가입코드 : 6789 </div>
+      <div class="code">가입코드 : 6789</div>
     </div>
   </div>
 
-  <div class="card" data-priority="normal" onclick="openCard('LULA BET','ZZ99','https://lula.ws')">
+  <!-- 카드 5 -->
+  <div class="card" data-priority="normal"
+   onclick="openCard('LULA BET','as88','https://lula.ws','PSC991',
+   '원화 USDT 무기명가입 페이백10%',
     <div class="img-box"><img src="img/img5.jpg"></div>
     <div class="content">
-      <div class="site">LULA BET </div>
-      <div class="desc"> 원화 USDT 무기명가입 페이백10% </div>
+      <div class="site">LULA BET</div>
+      <div class="desc">원화 USDT 무기명가입 페이백10%</div>
       <div class="code">가입코드 : ZZ99</div>
     </div>
   </div>
 
-  <div class="card" data-priority="normal" onclick="openCard('CHOY BET','TAN','http://cy-40.com/')">
+  <!-- 카드 6 -->
+  <div class="card" data-priority="normal"
+   onclick="openCard('CHOY BET','TAN','http://cy-40.com','DY0302',
+   '신규 회원 이벤트 다수',
+   '단기 이벤트 조기 종료 가능')">
     <div class="img-box"><img src="img/img6.jpg"></div>
     <div class="content">
       <div class="site">CHOY BET</div>
-      <div class="desc">이벤트 강화</div>
-      <div class="code">가입코드 : TAN </div>
+      <div class="desc">신규 30% 매충10% 페이백10%</div>
+      <div class="code">가입코드 : TAN</div>
     </div>
   </div>
 
@@ -263,7 +278,7 @@ body{
 <script>
 /* 블러 배경 */
 document.querySelectorAll(".img-box").forEach(box=>{
-  const img = box.querySelector("img");
+  const img=box.querySelector("img");
   box.style.setProperty("--bg",`url('${img.src}')`);
 });
 
@@ -276,11 +291,16 @@ function closeIntro(){
 
 /* 카드 팝업 */
 let currentCode="";
-function openCard(t,c,l){
-  currentCode=c;
-  pTitle.innerText=t;
-  pCode.innerText=c;
-  pLink.href=l;
+function openCard(title,code,link,telegramId,benefit,notice){
+  currentCode=code;
+  pTitle.innerText=title;
+  pCode.innerText=code;
+  pBenefit.innerText="혜택 : "+benefit;
+  pNotice.innerText="주의 : "+notice;
+  const tg=telegramId.replace("@","");
+  pTelegram.href="https://t.me/"+tg;
+  pTelegram.innerText="텔레그램 문의 @"+tg;
+  pLink.href=link;
   cardPopup.style.display="flex";
 }
 function closeCard(){ cardPopup.style.display="none"; }
@@ -292,8 +312,7 @@ function copyCode(){
 /* 방문자 수 */
 (function(){
   const d=new Date().toISOString().slice(0,10);
-  const k="v_"+d;
-  const ck="c_"+d;
+  const k="v_"+d, ck="c_"+d;
   let n=Number(localStorage.getItem(k)||0);
   if(!localStorage.getItem(ck)){
     n++; localStorage.setItem(k,n); localStorage.setItem(ck,1);
@@ -307,12 +326,11 @@ function copyCode(){
   const cards=[...w.children];
   const high=cards.filter(c=>c.dataset.priority==="high");
   const normal=cards.filter(c=>c.dataset.priority!=="high");
-  const shuffle=a=>a.sort(()=>Math.random()-.5);
-  shuffle(high); shuffle(normal);
+  const sh=a=>a.sort(()=>Math.random()-.5);
+  sh(high); sh(normal);
   [...high,...normal].forEach(c=>w.appendChild(c));
 })();
 </script>
 
 </body>
 </html>
-
