--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>88 추천 업체</title>
+<title>88 보증 업체 목록</title>
 
 <style>
 *,
@@ -160,7 +160,7 @@ body{
 
 <div class="header">
   <div class="logo">88</div>
-  <div class="sub">추천 · 보증 업체 안내</div>
+  <div class="sub">88 보증 업체 목록 </div>
 </div>
 
 <!-- 첫 방문 팝업 -->
@@ -334,3 +334,4 @@ function copyCode(){
 
 </body>
 </html>
+
